--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,12 @@ local.properties
 *.iws
 .idea/workspace.xml
 .idea/tasks.xml
+.idea/libraries
+.idea/modules
 
 #Gradle
 gradle/
 .gradletasknamecache
 .gradle/
 out/
+gradlew.bat
