--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ local.properties
 *.iws
 .idea/workspace.xml
 .idea/tasks.xml
+.idea/modules.xml
 .idea/libraries
 .idea/modules
 
@@ -34,3 +35,4 @@ gradle/
 .gradle/
 out/
 gradlew.bat
+gradlew
